fix(ui): align items center

--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -186,6 +186,7 @@
 @media (min-width: 320px) {
   .form__setting {
     flex-direction: row;
+    align-items: center;
   }
 }
 
